--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^16.8.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start -p 3005",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
